# figaro

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/figaro/: chord_recognition.py  datasets.py  evaluate.py  generate.py  input_representation.py  precompute_latents.py  train.py  vocab.py
src/figaro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/figaro/models/: seq2seq.py  vae.py
