[project]
name = "figaro"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paweł Kochański", email = "pawilioxion@gmail.com"},
]
dependencies = ["torch>=2.7.0", "transformers>=4.52.2", "pytorch-lightning>=2.5.1.post0", "pretty-midi>=0.2.10"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
